--- a/popup.css
+++ b/popup.css
@@ -1,4 +1,15 @@
 body {
-    width:200px;
-    height:250px;
+    width:250px;
+    height:300px;
  }
+
+ h1 {
+    text-align:center;
+}
+
+#footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    margin-bottom: 10px;
+}
